--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: fee76e6782fb01c6d18fd19c8c97d9f2c310c7ab
-  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
+  ms.openlocfilehash: 64e20f9a06acf85def278c1017bbbd588c7a6b39
+  ms.sourcegitcommit: ac5cbef0706d9910a76e4c0841fdac3ef8ed2e82
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88080671"
+  ms.lasthandoff: 09/03/2020
+  ms.locfileid: "89425970"
 highlightedContent:
   items:
   - title: 什么是 IoT Central？
@@ -68,7 +68,7 @@ conceptualContent:
     - url: ./core/tutorial-create-telemetry-rules.md
       itemType: how-to-guide
       text: 创建遥测规则
-    - url: ./core/howto-use-data-export.md
+    - url: ./core/howto-export-data.md
       itemType: how-to-guide
       text: 将数据导出到云目标 - 预览
     footerLink:
