--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -219,9 +219,10 @@
     - name: 创建计算资源
       items:
         - name: 使用工作室
+          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight, low priority'
           href: how-to-create-attach-compute-studio.md
         - name: 使用 Python SDK
-          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
+          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight, low priority'
           href: how-to-create-attach-compute-sdk.md
     - name: 设置你的环境
       items:
@@ -477,9 +478,6 @@
         - name: 对并行运行步骤进行调试和故障排除
           displayName: debug_batch consume pipeline parallelrunstep inference
           href: how-to-debug-parallel-run-step.md
-        - name: 迭代和发展机器学习管道
-          displayName: modularizing testing
-          href: concept-pipeline-practices-tips.md
     - name: 用于 CI/CD 的 Azure Pipelines
       displayName: 'continuous, integration, delivery'
       href: /azure/devops/pipelines/targets/azure-machine-learning?context=azure/machine-learning/context/ml-context
