--- a/articles/virtual-wan/index.yml
+++ b/articles/virtual-wan/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cherylmc
   ms.author: cherylmc
   ms.date: 08/19/2020
-  ms.openlocfilehash: 1a0a64864c4e8229b4a0f2211af06920fc1e73cc
-  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
+  ms.openlocfilehash: 772fa134eabc45dcbaa9e9b05c573aec493dd57b
+  ms.sourcegitcommit: bf1340bb706cf31bb002128e272b8322f37d53dd
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88654542"
+  ms.lasthandoff: 09/03/2020
+  ms.locfileid: "89438152"
 landingContent:
 - title: 关于虚拟 WAN
   linkLists:
@@ -25,6 +25,8 @@ landingContent:
       url: virtual-wan-about.md
   - linkListType: concept
     links:
+    - text: 迁移到虚拟 WAN
+      url: migrate-from-hub-spoke-topology.md
     - text: 使用位置和合作伙伴
       url: virtual-wan-locations-partners.md
     - text: 常见问题解答
