--- a/articles/key-vault/general/index.yml
+++ b/articles/key-vault/general/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 09/19/2019
-  ms.openlocfilehash: ada202a8683b64144f2adacc759b9461472e4a31
-  ms.sourcegitcommit: 64ad2c8effa70506591b88abaa8836d64621e166
+  ms.openlocfilehash: 080cf9d8b7816b28f299396de2fe147fc2f9b27e
+  ms.sourcegitcommit: 3246e278d094f0ae435c2393ebf278914ec7b97b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/17/2020
-  ms.locfileid: "88262562"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89378876"
 landingContent:
 - title: 关于 Azure Key Vault
   linkLists:
@@ -54,14 +54,20 @@ landingContent:
       url: security-recommendations.md
     - text: 安全基线
       url: security-baseline.md
+  - linkListType: how-to-guide
+    links:
+    - text: 对 Key Vault 进行身份验证
+      url: authentication.md
+    - text: 分配访问策略 (CLI)
+      url: assign-access-policy-CLI.md
+    - text: 分配访问策略 (PowerShell)
+      url: assign-access-policy-powershell.md
+    - text: 分配访问策略（门户）
+      url: assign-access-policy-portal.md
   - linkListType: tutorial
     links:
     - text: 使用专用链接
       url: private-link-service.md
-    - text: 使用托管标识
-      url: managed-identity.md
-    - text: 使用访问策略
-      url: group-permissions-for-apps.md
 - title: 客户端库
   linkLists:
   - linkListType: reference
