--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -59,6 +59,9 @@
           href: security-baseline.md
         - name: Azure Key Vault 安全建议
           href: security-recommendations.md
+        - name: Azure Policy 的安全控件
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ../security-controls-policy.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
     - name: 通知（预览版）
       items:
         - name: 使用 Azure 事件网格进行监视（预览版）
@@ -83,11 +86,15 @@
       items:
         - name: 对 Key Vault 进行身份验证
           href: authentication.md
-        - name: 使用应用服务托管标识
-          href: managed-identity.md
-        - name: 使用访问控制策略
-          href: group-permissions-for-apps.md
-        - name: 使用 Azure 基于角色的访问控制（预览）
+        - name: 分配访问策略
+          items:
+            - name: CLI
+              href: assign-access-policy-cli.md
+            - name: PowerShell
+              href: assign-access-policy-powershell.md
+            - name: 门户
+              href: assign-access-policy-portal.md
+        - name: 使用 Azure RBAC 管理对密钥、机密和证书的访问权限（预览版）
           href: rbac-guide.md
         - name: 排查访问问题
           href: troubleshooting-access-issues.md
