--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -4,16 +4,6 @@
   items:
     - name: 什么是虚拟 WAN？
       href: virtual-wan-about.md
-    - name: 体系结构
-      items:
-        - name: 迁移到虚拟 WAN
-          href: migrate-from-hub-spoke-topology.md
-        - name: 全球传输网络体系结构
-          href: virtual-wan-global-transit-network-architecture.md
-        - name: SD-WAN 连接体系结构
-          href: sd-wan-connectivity-architecture.md
-        - name: 与中国互联
-          href: interconnect-china.md
 - name: 教程
   items:
     - name: 创建站点到站点连接
@@ -36,11 +26,21 @@
           href: virtual-wan-locations-partners.md
         - name: 面向合作伙伴的自动化指南
           href: virtual-wan-configure-automation-providers.md
+    - name: 体系结构
+      items:
+        - name: 迁移到虚拟 WAN
+          href: migrate-from-hub-spoke-topology.md
+        - name: 全球传输网络体系结构
+          href: virtual-wan-global-transit-network-architecture.md
+        - name: SD-WAN 连接体系结构
+          href: sd-wan-connectivity-architecture.md
+        - name: 与中国互联
+          href: interconnect-china.md
     - name: 路由
       items:
         - name: 关于虚拟中心路由
           href: about-virtual-hub-routing.md
-        - name: 方案
+        - name: 路由方案
           items:
             - name: 任意位置到任意位置
               href: scenario-any-to-any.md
@@ -154,8 +154,6 @@
   items:
     - name: 常见问题解答
       href: virtual-wan-faq.md
-    - name: 更新公告
-      href: 'https://azure.microsoft.com/updates/?category=networking&query=VIRTUAL%20WAN'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/virtual-wan'
     - name: 订阅和服务限制
